maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: ')' expected but 'else' found.
	else{ for(c <- 0 to getMondeHauteur() - 1){
        ^